# yt-cloud

./: CMakeLists.txt
qmls/: BodyItem.qml  Constants.qml  FilePathEdit.qml  main.qml
src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
